working version of all existing menus